syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.education.grpc";

package validation;

message GrpcMenuDTOProto {
  int64 id = 1;
  string name = 2;
  double cost = 3;
}