syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.education.grpc";

package validation;

import "GrpcMenuDTO.proto";

message GrpcOrderPositionDTOProto {
  int64 orderId = 1;
  int32 quantity = 2;
  GrpcMenuDTOProto menu = 3;
}